Configure role-based access control: USER, ADMIN